test/corpus/expressions.txt
====================
Everything
====================

*

---

(source_file
  (everything))

====================
This expression
====================

@

---

(source_file
  (this))

====================
Parent expression
====================

^

---

(source_file
  (parent))

====================
Nested parent
====================

^.^.^

---

(source_file
  (parent))

====================
Parameter
====================

$type

---

(source_file
  (parameter
    (identifier)))

====================
Bare identifier
====================

title

---

(source_file
  (identifier))

====================
Parenthesized expression
====================

(1 + 2)

---

(source_file
  (parenthesized_expression
    (addition_expression
      (number)
      (number))))

====================
Logical OR
====================

a || b

---

(source_file
  (or_expression
    (identifier)
    (identifier)))

====================
Logical AND
====================

a && b

---

(source_file
  (and_expression
    (identifier)
    (identifier)))

====================
Logical NOT
====================

!a

---

(source_file
  (not_expression
    (identifier)))

====================
In expression
====================

x in y

---

(source_file
  (in_expression
    (identifier)
    (identifier)))

====================
Match expression
====================

title match "hello*"

---

(source_file
  (match_expression
    (identifier)
    (string)))

====================
Comparison operators
====================

a >= b

---

(source_file
  (comparison_expression
    (identifier)
    (identifier)))

====================
Equality
====================

a == b

---

(source_file
  (equality_expression
    (identifier)
    (identifier)))

====================
Inequality
====================

a != b

---

(source_file
  (equality_expression
    (identifier)
    (identifier)))

====================
Addition
====================

a + b

---

(source_file
  (addition_expression
    (identifier)
    (identifier)))

====================
Subtraction
====================

a - b

---

(source_file
  (addition_expression
    (identifier)
    (identifier)))

====================
Multiplication
====================

a * b

---

(source_file
  (multiplication_expression
    (identifier)
    (identifier)))

====================
Division
====================

a / b

---

(source_file
  (multiplication_expression
    (identifier)
    (identifier)))

====================
Modulo
====================

a % b

---

(source_file
  (multiplication_expression
    (identifier)
    (identifier)))

====================
Exponentiation
====================

a ** b

---

(source_file
  (exponentiation_expression
    (identifier)
    (identifier)))

====================
Unary minus
====================

-x

---

(source_file
  (unary_expression
    (identifier)))

====================
Unary plus
====================

+x

---

(source_file
  (unary_expression
    (identifier)))

====================
Operator precedence mul before add
====================

a + b * c

---

(source_file
  (addition_expression
    (identifier)
    (multiplication_expression
      (identifier)
      (identifier))))

====================
Operator precedence and before or
====================

a || b && c

---

(source_file
  (or_expression
    (identifier)
    (and_expression
      (identifier)
      (identifier))))

====================
Right-associative exponentiation
====================

a ** b ** c

---

(source_file
  (exponentiation_expression
    (identifier)
    (exponentiation_expression
      (identifier)
      (identifier))))
