test/corpus/functions.txt
; https://spec.groq.dev/GROQ-1.revision4/

====================
Simple function call
; https://spec.groq.dev/GROQ-1.revision4/#sec-Function-call-expression
====================

count(items)

---

(source_file
  (function_call
    name: (identifier)
    (identifier)))

====================
Function with no arguments
; https://spec.groq.dev/GROQ-1.revision4/#sec-Function-call-expression
====================

now()

---

(source_file
  (function_call
    name: (identifier)))

====================
Function with multiple arguments
; https://spec.groq.dev/GROQ-1.revision4/#sec-Function-call-expression
====================

coalesce(a, b, c)

---

(source_file
  (function_call
    name: (identifier)
    (identifier)
    (identifier)
    (identifier)))

====================
Namespaced function
; https://spec.groq.dev/GROQ-1.revision4/#sec-Function-call-expression
====================

array::join(tags, ", ")

---

(source_file
  (function_call
    name: (namespaced_identifier
      namespace: (identifier)
      name: (identifier))
    (identifier)
    (string)))

====================
Nested function call
; https://spec.groq.dev/GROQ-1.revision4/#sec-Function-call-expression
====================

dateTime(now())

---

(source_file
  (function_call
    name: (identifier)
    (function_call
      name: (identifier))))

====================
Math namespace
; https://spec.groq.dev/GROQ-1.revision4/#sec-Function-call-expression
====================

math::sum(prices)

---

(source_file
  (function_call
    name: (namespaced_identifier
      namespace: (identifier)
      name: (identifier))
    (identifier)))

====================
select() with condition-value pairs
; https://spec.groq.dev/GROQ-1.revision4/#sec-Function-call-expression
; https://spec.groq.dev/GROQ-1.revision4/#sec-Pair
====================

select(popularity > 20 => "high", popularity > 10 => "medium", "low")

---

(source_file
  (function_call
    name: (identifier)
    (pair
      (comparison_expression
        (identifier)
        (number))
      (string))
    (pair
      (comparison_expression
        (identifier)
        (number))
      (string))
    (string)))

====================
fn declaration with namespace
; https://spec.groq.dev/GROQ-1.revision4/#sec-Function-Definition
====================

fn custom::double(x) = x * 2;
*

---

(source_file
  (function_declaration
    name: (namespaced_identifier
      namespace: (identifier)
      name: (identifier))
    (identifier)
    body: (multiplication_expression
      (identifier)
      (number)))
  (everything))

====================
fn declaration with multiple parameters
; https://spec.groq.dev/GROQ-1.revision4/#sec-Function-Definition
====================

fn math::add(a, b) = a + b;
*

---

(source_file
  (function_declaration
    name: (namespaced_identifier
      namespace: (identifier)
      name: (identifier))
    (identifier)
    (identifier)
    body: (addition_expression
      (identifier)
      (identifier)))
  (everything))
