test/corpus/literals.txt
; https://spec.groq.dev/GROQ-1.revision4/

====================
Null literal
; https://spec.groq.dev/GROQ-1.revision4/#sec-Null
====================

null

---

(source_file
  (null))

====================
Boolean true
; https://spec.groq.dev/GROQ-1.revision4/#sec-Boolean
====================

true

---

(source_file
  (true))

====================
Boolean false
; https://spec.groq.dev/GROQ-1.revision4/#sec-Boolean
====================

false

---

(source_file
  (false))

====================
Integer number
; https://spec.groq.dev/GROQ-1.revision4/#sec-Number
====================

42

---

(source_file
  (number))

====================
Decimal number
; https://spec.groq.dev/GROQ-1.revision4/#sec-Number
====================

3.14

---

(source_file
  (number))

====================
Scientific notation
; https://spec.groq.dev/GROQ-1.revision4/#sec-Number
====================

1e10

---

(source_file
  (number))

====================
Scientific notation with decimal and sign
; https://spec.groq.dev/GROQ-1.revision4/#sec-Number
====================

2.5E-3

---

(source_file
  (number))

====================
Double quoted string
; https://spec.groq.dev/GROQ-1.revision4/#sec-String
====================

"hello world"

---

(source_file
  (string))

====================
Single quoted string
; https://spec.groq.dev/GROQ-1.revision4/#sec-String
====================

'hello world'

---

(source_file
  (string))

====================
String with escape sequences
; https://spec.groq.dev/GROQ-1.revision4/#sec-String
====================

"line1\nline2\t\"quoted\""

---

(source_file
  (string
    (escape_sequence)
    (escape_sequence)
    (escape_sequence)
    (escape_sequence)))

====================
String with unicode escape
; https://spec.groq.dev/GROQ-1.revision4/#sec-String
====================

"\u0041\u{1F600}"

---

(source_file
  (string
    (escape_sequence)
    (escape_sequence)))

====================
Empty array
; https://spec.groq.dev/GROQ-1.revision4/#sec-Array
====================

[]

---

(source_file
  (array))

====================
Array with elements
; https://spec.groq.dev/GROQ-1.revision4/#sec-Array
====================

[1, "two", true, null]

---

(source_file
  (array
    (number)
    (string)
    (true)
    (null)))

====================
Array with trailing comma
; https://spec.groq.dev/GROQ-1.revision4/#sec-Array
====================

[1, 2,]

---

(source_file
  (array
    (number)
    (number)))

====================
Object literal
; https://spec.groq.dev/GROQ-1.revision4/#sec-Object
====================

{"name": "Alice", "age": 30}

---

(source_file
  (object
    key: (string)
    value: (string)
    key: (string)
    value: (number)))

====================
Empty object
; https://spec.groq.dev/GROQ-1.revision4/#sec-Object
====================

{}

---

(source_file
  (object))
