test/corpus/pipes.txt
; https://spec.groq.dev/GROQ-1.revision4/#sec-Pipe-functions

====================
Pipe with order
====================

*[_type == "movie"] | order(_createdAt asc)

---

(source_file
  (postfix_expression
    (postfix_expression
      (everything)
      (subscript
        (comparison_expression
          (identifier)
          (string))))
    (pipe_call
      (function_call
        name: (identifier)
        (asc_expression
          (identifier))))))

====================
Chained pipes
====================

*[_type == "movie"] | order(releaseDate desc) | order(_createdAt asc)

---

(source_file
  (postfix_expression
    (postfix_expression
      (postfix_expression
        (everything)
        (subscript
          (comparison_expression
            (identifier)
            (string))))
      (pipe_call
        (function_call
          name: (identifier)
          (desc_expression
            (identifier)))))
    (pipe_call
      (function_call
        name: (identifier)
        (asc_expression
          (identifier))))))

====================
Pipe with score
====================

*[_type == "post"] | score(title match "groq")

---

(source_file
  (postfix_expression
    (postfix_expression
      (everything)
      (subscript
        (comparison_expression
          (identifier)
          (string))))
    (pipe_call
      (function_call
        name: (identifier)
        (comparison_expression
          (identifier)
          (string))))))
